@@ -1,7 +1,10 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(extract_tvalues,lm)
+S3method(extract_tvalues,rq)
 S3method(print,RGT_plot)
 S3method(standardizeCoefficients,lm)
+S3method(standardizeCoefficients,rq)
 S3method(standardizeCoefficients,svarest)
 S3method(standardizeCoefficients,varest)
 export("%+%")
@@ -21,6 +24,8 @@ export(differences)
 export(exportAdfDifferences)
 export(extract.spikeslab)
 export(extractRegressionStatistics)
+export(extract_spikeslab)
+export(extract_tvalues)
 export(findColsNA)
 export(findRowsNA)
 export(getRowsOutlierRemoval)
