@@ -2,6 +2,10 @@
 
 # Development version
 
+* Added extract_tvalues.rq()
+
+* Added standarizeCoefficients.rq()
+
 * Added testDiagnostics()
 
 * Added jplot()
